<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_main_scene"
    tools:showPaths="true">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="200dp" />

    <View
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="@id/guideline_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/tv_product_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="20dp"
        android:text="@string/product_search"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/view_search"
        app:layout_constraintStart_toStartOf="parent" />

    <View
        android:id="@+id/view_search"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/round_rectangle_shape"
        app:layout_constraintBottom_toTopOf="@id/guideline_toolbar"
        app:layout_constraintEnd_toStartOf="@id/btn_barcode"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btn_search"
        android:layout_width="48dp"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/round_rectangle_shape"
        android:backgroundTint="?attr/colorPrimary"
        android:src="@drawable/ic_round_search_24"
        app:layout_constraintBottom_toBottomOf="@id/view_search"
        app:layout_constraintEnd_toEndOf="@id/view_search"
        app:layout_constraintTop_toTopOf="@id/view_search" />

    <TextView
        android:id="@+id/tv_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:elevation="4dp"
        android:text="@string/search"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/view_search"
        app:layout_constraintStart_toStartOf="@id/view_search"
        app:layout_constraintTop_toTopOf="@id/view_search" />

    <ImageButton
        android:id="@+id/btn_barcode"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/round_rectangle_shape"
        android:src="@drawable/ic_barcode"
        app:layout_constraintBottom_toTopOf="@id/guideline_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/view_search" />


    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline_toolbar">

        <LinearLayout
            android:id="@+id/linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_catalog_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="24dp" />


            <TextView
                style="@style/headerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:text="@string/recently_viewed" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_recently_viewed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/headerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:text="@string/limited_offer" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_limited_offer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                style="@style/headerStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="20dp"
                android:text="@string/best_price" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_best_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="16dp" />


        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.motion.widget.MotionLayout>